# hydracastlelabyrinth

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  io.github.ptitSeb.hydracastlelabyrinth.appdata.xml  io.github.ptitSeb.hydracastlelabyrinth.desktop  io.github.ptitSeb.hydracastlelabyrinth.metainfo.xml
.github/workflows/: release.yml
docs/: index.html  index.js  index.wasm
src/: PHL.c  PHL.h  amigaos.h  game.c  game.h  hero.c  hero.h  ini.c  inventory.c  inventory.h  main.c  object.c  options.c  options.h  qda.c  qda.h  stagedata.h  template.html  text.c  text.h  titlescreen.c  titlescreen.h  weapon.c
src/3ds/: audio.c  audio.h  graphics.c  graphics.h  input.c  input.h  system.c  system.h
src/psp/: audio.c  audio.h  graphics.c  graphics.h  input.c  input.h  system.c  system.h
src/sdl/: audio.c  audio.h  graphics.c  graphics.h  input.c  input.h  system.c  system.h
src/sdl2/: audio.c  audio.h  graphics.c  graphics.h  input.c  input.h  scale.cpp  scale.h  system.c  system.h
src/wii/: audio.c  audio.h  graphics.c  graphics.h  input.c  input.h  system.c  system.h
